--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.I211385"
         tools:targetApi="31">
         <activity
+            android:name=".Video_Camera_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Photo_Camera_Activity"
+            android:exported="false" />
+        <activity
             android:name=".Community_Chat_Activity"
             android:exported="false" />
         <activity
@@ -22,7 +28,7 @@
             android:name=".Chat_Page_Activiy"
             android:exported="false" />
         <activity
-            android:name=".Add_Mentor"
+            android:name=".Add_Mentor_Activity"
             android:exported="false" />
         <activity
             android:name=".Review_Page_Activity"
