--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.I211385"
         tools:targetApi="31">
         <activity
+            android:name=".Book_Appointment_Activity"
+            android:exported="false" />
+        <activity
             android:name=".Video_Camera_Activity"
             android:exported="false" />
         <activity
